--- a/platforms/common/scss/admin/_modal.scss
+++ b/platforms/common/scss/admin/_modal.scss
@@ -70,7 +70,7 @@ html.g5-dialog-open {
         .g5-content {
             border-radius: 5px;
             background: #f0f0f0;
-            color: #444444;
+            color: $core-text;
             padding: 1rem;
             position: relative;
             margin: 0 auto;
